--- a/ vocabulary-cloud-for-software/Software Terms Word Cloud/build.properties
+++ b/ vocabulary-cloud-for-software/Software Terms Word Cloud/build.properties
@@ -3,4 +3,11 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               icons/
+               icons/,\
+               workspace2/SoftwareTermsWordCloud/lib/prefuse.jar,\
+               workspace2/SoftwareTermsWordCloud/lib/rsfTree.jar
+source.workspace2/SoftwareTermsWordCloud/lib/prefuse.jar = 
+jars.compile.order = .,\
+                     workspace2/SoftwareTermsWordCloud/lib/prefuse.jar,\
+                     workspace2/SoftwareTermsWordCloud/lib/rsfTree.jar
+source.workspace2/SoftwareTermsWordCloud/lib/rsfTree.jar = 
