inclusão da biblioteca de visualização em círculos (prefuse) + leitura do vocabulário a partir da AST

--- a/ vocabulary-cloud-for-software/Software Terms Word Cloud/build.properties
+++ b/ vocabulary-cloud-for-software/Software Terms Word Cloud/build.properties
@@ -4,10 +4,16 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               workspace2/SoftwareTermsWordCloud/lib/prefuse.jar,\
-               workspace2/SoftwareTermsWordCloud/lib/rsfTree.jar
-source.workspace2/SoftwareTermsWordCloud/lib/prefuse.jar = 
+               lib/colt.jar,\
+               lib/prefuse.jar,\
+               lib/rsfTree.jar,\
+               lib/irutils-old.jar
 jars.compile.order = .,\
-                     workspace2/SoftwareTermsWordCloud/lib/prefuse.jar,\
-                     workspace2/SoftwareTermsWordCloud/lib/rsfTree.jar
-source.workspace2/SoftwareTermsWordCloud/lib/rsfTree.jar = 
+                     lib/colt.jar,\
+                     lib/prefuse.jar,\
+                     lib/rsfTree.jar,\
+                     lib/irutils-old.jar
+source.lib/colt.jar = 
+source.lib/prefuse.jar = 
+source.lib/rsfTree.jar = 
+source.lib/irutils.jar = 
