--- a/ vocabulary-cloud-for-software/Software Terms Word Cloud/.settings/org.eclipse.jdt.core.prefs
+++ b/ vocabulary-cloud-for-software/Software Terms Word Cloud/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Thu Jul 08 10:28:03 GMT-03:00 2010
+#Wed Sep 29 20:53:56 BRT 2010
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
